Deleting the product based on the product id
